<resources>
    <string name="facebook_app_id" translatable="false">345886311791288</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">e01450b1902840f0d85cd6f746ddd509</string>
    <string name="app_name" translatable="false">DietiDeals24</string>
    <string name="scelteIniziali_motto1" translatable="false">If you want it,</string>
    <string name="scelteIniziali_motto2" translatable="false">get</string>
    <string name="scelteIniziali_motto3" translatable="false">it.</string>
    <string name="scelteIniziali_nomeApp1" translatable="false">DietiDeals</string>
    <string name="scelteIniziali_nomeApp2" translatable="false">24</string>
    <string name="scelteIniziali_accessibilitàLogo">DietiDeals24 logo</string>
    <string name="selezioneTipoAccount_messaggioCorpo">Log in as…</string>
    <string name="selezioneTipoAccount_pulsanteCompratore">Buyer</string>
    <string name="selezioneTipoAccount_pulsanteVenditore">Seller</string>
    <string name="selezioneTipoAccount_pulsanteOspite"><u>Log in as guest</u></string>
    <string name="selezioneAccessoRegistrazione_saluto">Hi, %1$s</string>
    <string name="selezioneAccessoRegistrazione_pulsanteAccedi">Log in</string>
    <string name="selezioneAccessoRegistrazione_separatore">or</string>
    <string name="selezioneAccessoRegistrazione_pulsanteRegistrati">Sign up</string>
    <string name="tipoAccount_compratore">buyer</string>
    <string name="tipoAccount_venditore">seller</string>
    <string name="accessibilitàIndietro">Back</string>
    <string name="selezioneAccessoRegistrazione_accessibilitàLogo">DietiDeals24 logo</string>
    <string name="placeholder" translatable="false">%1$s</string>
    <string name="accesso_messaggioCorpo">Log in</string>
    <string name="selezioneAccessoRegistrazione_etichettaEmail">Email</string>
    <string name="selezioneAccessoRegistrazione_etichettaPassword">Password</string>
    <string name="accesso_pulsanteAccedi">Log in</string>
    <string name="selezioneAccessoRegistrazione_accessibilitàPulsanteFacebook">Facebook access</string>
    <string name="accesso_erroreCredenzialiNonCorrette">Either your credentials are wrong or no account with these credentials exists.</string>
    <string name="erroreCampi">There\'s an issue in this field.</string>
    <string name="accesso_erroreSocial">An error occurred while trying to log in with the social account.</string>
    <string name="registrazione_pulsanteAvanti">Next</string>
    <string name="registrazione_messaggioCorpo">Sign up</string>
    <string name="asterisco" translatable="false">*</string>
    <string name="registrazione_erroreEmailGiàUsata">The email was already used to create an account of the same type.</string>
    <string name="registrazione_errorePasswordNonSicura">The provided password does not follow the minimum security criteria.</string>
    <string name="registrazione_erroreCampiObbligatoriNonCompilati">You did not fill all the mandatory fields.</string>
    <string name="registrazione_erroreRegistrazioneSocial">An error occurred while trying to sign up with the social account.</string>
    <string name="infoPassword_messaggioCorpo">The password must:\n— Contain at least 8 characters;\n— Contain at least an uppercase character;\n— Contain at least a number;\n— Contain at least a special character included among:\n<b>!@#$%^{}&amp;*</b></string>
    <string name="infoPassword_titolo">Requirements</string>
    <string name="creazioneProfiloFase1e2_messaggioCorpo">Tell us a bit about you!</string>
    <string name="creazioneProfiloFase1_etichettaNomeUtente">Username</string>
    <string name="creazioneProfiloFase1_etichettaNome">Name</string>
    <string name="creazioneProfiloFase1_etichettaCognome">Surname</string>
    <string name="creazioneProfiloFase1_etichettaDataNascita">Birthdate</string>
    <string name="creazioneProfiloFase2_etichettaBiografia">Biography</string>
    <string name="creazioneProfiloFase2_etichettaAreaGeografica">Geographic location</string>
    <string name="creazioneProfiloFase2_etichettaGenere">Gender</string>
    <string name="creazioneProfiloFase2_etichettaFoto">Import profile picture</string>
    <string name="creazioneProfiloFase3_etichettaLinkPersonale">Personal link</string>
    <string name="creazioneProfiloFase3_etichettaLinkInstagram">Instagram link</string>
    <string name="creazioneProfiloFase3_etichettaLinkFacebook">Facebook link</string>
    <string name="creazioneProfiloFase3_messaggioCorpo">It\'s almost over…</string>
    <string name="creazioneProfiloFase3_etichettaLinkGitHub">GitHub link</string>
    <string name="creazioneProfiloFase3_etichettaLinkX">X link</string>
    <string name="creazioneProfiloFase3_pulsanteFine">End</string>
    <string name="creazioneProfiloFase1e2_pulsanteAvanti">Next</string>
    <string name="registrazione_erroreFormatoEmail">The email does not have a valid format.</string>
    <string name="associaProfilo_messaggioCorpo">Profile linked!</string>
    <string name="associaProfilo_messaggioCorpo2">Looks like this email is already linked to an existing account of another type!\nThe profile information of this account are now linked to the new one too.</string>
    <string name="associaProfilo_pulsanteFine">End</string>
    <string name="apiError">Error while communicating with the server.</string>
    <string name="accesso_noAccountFacebookCollegato">Your Facebook account is not linked to any DietiDeals24 account of this type. Please, signup.</string>
    <string name="registrazione_accountFacebookGiàCollegato">Your Facebook account is already linked to a DietiDeals24 account of this type. Please, signin.</string>
    <string name="accesso_loginSocialOK">Successful linking to Facebook account. Please wait.</string>
    <string name="nav_home">Home</string>
    <string name="nav_nuovo">New auction</string>
    <string name="nav_notifiche">Notifications</string>
    <string name="nav_profilo">Profile</string>
    <string name="home_cerca">Search…</string>
    <string name="home_filtra">Filter by category</string>
    <string name="home_vuota">There are no active auctions.</string>
    <string name="profilo_saluto">Hi,</string>
    <string name="profilo_tipoAccount">%1$s account</string>
    <string name="profilo_pulsante1">User info</string>
    <string name="profilo_pulsante2">My created auctions</string>
    <string name="profilo_pulsante3">Participation history</string>
    <string name="profilo_pulsante4">Help</string>
    <string name="profilo_pulsante5">Logout</string>
    <string name="notifiche_titolo">Notifications</string>
    <string name="crea_tipoAsta">%1$s auction</string>
    <string name="crea_dataScadenza">End date</string>
    <string name="crea_ora">End time</string>
    <string name="crea_prezzo">%1$s price</string>
    <string name="crea_foto">Add product image</string>
    <string name="crea_nome">Product name</string>
    <string name="crea_descrizione">Product description</string>
    <string name="crea_categoria">Category</string>
    <string name="crea_pulsanteCrea">Create</string>
    <string name="accessoRegistrazione_accessibilitàEmail">Email</string>
    <string name="accessoRegistrazione_accessibilitàPassword">Password</string>
    <string name="crea_accessibilitàPrezzo">Price</string>
    <string name="crea_accessibilitàDataScadenza">End date</string>
    <string name="crea_accessibilitàOraScadenza">End time</string>
    <string name="crea_accessibilitàNome">Product name</string>
    <string name="crea_accessibilitàDescrizione">Product description</string>
    <string name="crea_accessibilitàCategoria">Category</string>
    <string name="creazioneProfiloFase1_accessibilitàNomeUtente">Username</string>
    <string name="creazioneProfiloFase1_accessibilitàNome">Name</string>
    <string name="creazioneProfiloFase1_accessibilitàCognome">Surname</string>
    <string name="creazioneProfiloFase1_accessibilitàDataNascita">Birthdate</string>
    <string name="creazioneProfiloFase2_accessibilitàBiografia">Biography</string>
    <string name="creazioneProfiloFase2_accessibilitàAreaGeografica">Geographic location</string>
    <string name="creazioneProfiloFase2_accessibilitàGenere">Gender</string>
    <string name="creazioneProfiloFase3_accessibilitàLinkPersonale">Personal link</string>
    <string name="creazioneProfiloFase3_accessibilitàLinkInstagram">Instagram link</string>
    <string name="creazioneProfiloFase3_accessibilitàLinkFacebook">Facebook link</string>
    <string name="creazioneProfiloFase3_accessibilitàLinkGitHub">GitHub link</string>
    <string name="creazioneProfiloFase3_accessibilitàLinkX">X link</string>
    <string name="dettagliAsta_titolo">Auction details</string>
    <string name="dettagliAsta_accessibilitàAiuto">Auction help</string>
    <string name="dettagliAsta_scadenza">Expires</string>
    <string name="notifica_tempoFa">%1$s ago</string>
    <string name="asta_scadenza">Expires</string>
    <string name="dettagliAsta_creataDa">Created by</string>
    <string name="dettagliAsta_titoloDescrizione">Product description</string>
    <string name="dettagliAsta_testoOfferta1">The highest bid is:</string>
    <string name="dettagliAsta_pulsanteOfferta">Make bid</string>
    <string name="dettagliProfilo_tipoAccount">%1$s profile</string>
    <string name="dettagliProfilo_etichettaNome">Name</string>
    <string name="dettagliProfilo_etichettaCognome">Surname</string>
    <string name="dettagliProfilo_etichettaEmail">Email</string>
    <string name="dettagliProfilo_etichettaDataNascita">Birthdate</string>
    <string name="dettagliProfilo_etichettaGenere">Gender</string>
    <string name="dettagliProfilo_etichettaAreaGeografica">Geographic location</string>
    <string name="dettagliProfilo_etichettaBiografia">Biography</string>
    <string name="dettagliProfilo_etichettaLinkPersonale">Personal link</string>
    <string name="dettagliProfilo_etichettaSocial">Social links</string>
    <string name="dettagliProfilo_accessibiltàModifica">Edit profile</string>
    <string name="valuta">$</string>
    <string name="modificaProfilo_accessibilitàConferma">Confirm</string>
    <string name="modificaProfilo_titolo">Edit profile</string>
    <string name="creazioneProfiloFase1_titoloPopupData">Select your birthdate</string>
    <string name="ok">OK</string>
    <string name="tipoAsta_astaInversa">Inverse</string>
    <string name="tipoAsta_astaSilenziosa">Silent</string>
    <string name="tipoAsta_astaTempoFisso">Fixed-time</string>
    <string name="card_accessibilitàModificaAsta">Edit auction</string>
    <string name="card_accessibilitàEliminaAsta">Delete auction</string>
    <string name="popupOfferta_accessibilitàOfferta">Bid</string>
    <string name="modifica_pulsanteModifica">Edit</string>
    <string name="offerta_avviso">You won\'t be able to withdraw your bid anymore after sending.</string>
    <string name="aiuto_materialTextView1">Once logged in, on the navbar press the button</string>
    <string name="aiuto_materialTextView3">A page where you can access various functionalities will appear. Select the button</string>
    <string name="aiuto7_materialTextView4">All active and no longer active (either failed or won) auctions will be listed. Find the auction\'s card of which you want to edit the details, then press the button on the top-right corner of the screen</string>
    <string name="aiuto7_materialTextView5">A page where you can edit single fields will appear. When you\'re done, press</string>
    <string name="aiuto7_materialTextView6">on the bottom of the page. If you change your mind, you can revert all the modifications by using the button on the top-left of the screen</string>
    <string name="aiuto7_materialTextView7">Otherwise, you can edit your auction even from the auction\'s details page. You can\'t edit a closed auction, though.</string>
</resources>