<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/aiuto7_linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="280dp"
    android:background="@color/grigio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aiuto7_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aiuto_materialTextView1"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/aiuto7_shapeableImageView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/icona_profilo"
            android:tint="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aiuto7_materialTextView1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_profilo"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aiuto7_shapeableImageView1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aiuto_materialTextView3"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aiuto7_materialTextView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aiuto7_materialButton1"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/fira_sans_medium"
            android:gravity="center|start"
            android:text="@string/profilo_pulsante2"
            android:textColor="@color/blu"
            android:textSize="18sp"
            app:backgroundTint="@color/materialbuttonbackground"
            app:icon="@drawable/icona_asta"
            app:iconGravity="end"
            app:iconSize="40dp"
            app:iconTint="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aiuto7_materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aiuto7_materialTextView4"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aiuto7_materialButton1" />

        <ImageButton
            android:id="@+id/aiuto7_imageButton1"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/cerchio"
            android:backgroundTint="@color/blu"
            android:contentDescription="@string/card_accessibilitàModificaAsta"
            android:src="@drawable/icona_matita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aiuto7_materialTextView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aiuto7_materialTextView5"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aiuto7_imageButton1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aiuto7_MaterialButton2"
            style="@style/BottoneArancionePiccolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/modifica_pulsanteModifica"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aiuto7_materialTextView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aiuto7_materialTextView6"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aiuto7_MaterialButton2" />

        <ImageButton
            android:id="@+id/aiuto7_imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/cerchio"
            android:backgroundTint="@color/blu"
            android:contentDescription="@string/accessibilitàIndietro"
            android:src="@drawable/icona_indietro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aiuto7_materialTextView6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/aiuto7_materialTextView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aiuto7_materialTextView7"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="@color/blu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aiuto7_imageButton2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
