<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/associaProfilo_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blu">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/associaProfilo_sfondoLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/selezioneAccessoRegistrazione_accessibilitàLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/cerchio" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/associaProfilo_logo"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/scelteIniziali_accessibilitàLogo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/associaProfilo_sfondoLogo"
        app:layout_constraintEnd_toEndOf="@+id/associaProfilo_sfondoLogo"
        app:layout_constraintStart_toStartOf="@+id/associaProfilo_sfondoLogo"
        app:layout_constraintTop_toTopOf="@+id/associaProfilo_sfondoLogo"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/associaProfilo_nomeApp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/scelteIniziali_nomeApp1"
        android:textColor="@color/blu"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/associaProfilo_logo"
        app:layout_constraintTop_toBottomOf="@+id/associaProfilo_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/associaProfilo_nomeApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/scelteIniziali_nomeApp2"
        android:textColor="@color/arancione"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/associaProfilo_nomeApp1"
        app:layout_constraintStart_toEndOf="@+id/associaProfilo_nomeApp1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/associaProfilo_messaggioCorpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fira_sans"
        android:text="@string/associaProfilo_messaggioCorpo"
        android:textColor="@color/grigio"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associaProfilo_sfondoLogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associaProfilo_messaggioCorpo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/associaProfilo_messaggioCorpo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/fira_sans_medium"
                android:text="@string/associaProfilo_messaggioCorpo2"
                android:textAlignment="center"
                android:textColor="@color/grigio"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/associaProfilo_pulsanteFine"
                style="@style/BottoneArancionePiccolo"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="64dp"
                android:text="@string/associaProfilo_pulsanteFine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/associaProfilo_messaggioCorpo2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>