<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/popupOfferta_testoOfferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/placeholder"
        android:textColor="@color/blu"
        android:textSize="15sp"
        app:fontFamily="@font/fira_sans" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/popupOfferta_valoreOfferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:foregroundTint="#E93939"
        android:text="@string/placeholder"
        android:textColor="@color/arancione"
        android:textSize="24sp"
        app:fontFamily="@font/fira_sans_medium" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/popupOfferta_campoOfferta"
        android:layout_width="320dp"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        app:boxBackgroundColor="@color/grigio"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/arancione"
        app:boxStrokeErrorColor="@color/rosso"
        app:boxStrokeWidth="1.5dp"
        app:cursorColor="@color/arancione"
        app:cursorErrorColor="@color/rosso"
        app:endIconMode="clear_text"
        app:endIconTint="@color/arancione"
        app:errorIconTint="@color/rosso"
        app:errorTextColor="@color/arancione"
        app:hintTextColor="@color/arancione"
        app:prefixText="@string/valuta"
        app:prefixTextColor="@color/blu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popupOfferta_offerta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/popupOfferta_accessibilitàOfferta"
            android:inputType="numberDecimal"
            android:textColor="@color/nero" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/popupOfferta_avviso"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/offerta_avviso"
        android:textColor="@color/rosso"
        android:textSize="20sp"
        app:fontFamily="@font/fira_sans_medium" />
</LinearLayout>